# alphabet-sign-recognition-portal

./: .env  .gitignore  CLAUDE.md  README.md  changes-log.md  checklist.md  pyproject.toml  run_pretrained_model.ipynb
.github/workflows/: lint-backend.yml  test-backend.yml
backend/: .env  Dockerfile  README.md  SIGN_RECOGNITION.md  pyproject.toml  requirements-ml.txt
backend/app/: main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: __init__.py  asl.py  health.py
backend/app/core/: config.py
backend/app/ml/: __init__.py  dataset.py  model.py
backend/app/services/: __init__.py  asl_recognition.py
backend/docs/: ARCHITECTURE.md  PYTORCH_MODEL_TRAINING.md  QUICKSTART.md
backend/models/: best_model.pt  final_model.pt
backend/scripts/: __init__.py  demo_mock_prediction.py  evaluate_model.py  prepare_dataset.py  prestart.sh  test_inference.py  tests-start.sh  train_model.py
backend/tests/: README.md  conftest.py  test_health.py
backend/tests/api/routes/: test_asl_recognition.py
backend/tests/ml/: test_dataset.py  test_model.py
backend/tests/services/: test_asl_pytorch_integration.py  test_asl_recognition_service.py
frontend/: .env.local  README.md  jest.setup.js  package.json  pnpm-lock.yaml
frontend/__tests__/lib/: api-client.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/translate/: route.ts
frontend/components/: asl-input.tsx  asl-recognition-display.tsx  history-panel.tsx  translation-display.tsx  video-input.tsx
frontend/hooks/: use-recognition-history.ts
frontend/lib/: api-client.ts
